added Information sections

--- a/src/Styles/vars.css
+++ b/src/Styles/vars.css
@@ -4,4 +4,6 @@
   --fontOne: 'Teko', sans-serif;
   --fontTwo: 'Source Sans Pro', sans-serif;
   --fontThree: 'Italianno', cursive;
+  --main: #e76d46;
+  --black: #1e1d1b;
 }
