--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   width: 100%;
   height: 100vh;
   background-image: url('./Assets/gt40Mobile5.jpg');
@@ -7,6 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 
 .content {
