--- a/src/Styles/Icon.module.css
+++ b/src/Styles/Icon.module.css
@@ -1,6 +1,82 @@
 .container {
+  width: auto;
+}
+
+.icon-container {
   width: 45px;
   height: 45px;
-  background-color: gray;
-  border-radius: 50%;
+  background-color: white;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  font-size: 5.2vw;
+  color: var(--black);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.modal-container {
+  box-sizing: border-box;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0 1rem;
+  border-radius: 0.5rem;
+}
+
+.image {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  border-radius: 0.5rem 0.5rem 0 0;
+}
+
+.title-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  color: var(--black);
+}
+
+.modal-icon {
+  font-size: 7vw;
+  margin-bottom: 0.25rem;
+}
+
+.title {
+  margin: 0.5rem 0;
+  font-size: 9vw;
+  font-family: var(--fontOne);
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.content {
+  font-size: 4vw;
+  font-family: var(--fontTwo);
+  margin: 0 0.5rem 0.5rem;
+}
+
+.invisible {
+  visibility: hidden;
 }
