--- a/src/Styles/vars.css
+++ b/src/Styles/vars.css
@@ -5,5 +5,6 @@
   --fontTwo: 'Source Sans Pro', sans-serif;
   --fontThree: 'Italianno', cursive;
   --main: #e76d46;
+  --mainFade: #e76e4625;
   --black: #1e1d1b;
 }
