--- a/src/Styles/vars.css
+++ b/src/Styles/vars.css
@@ -4,7 +4,10 @@
   --fontOne: 'Teko', sans-serif;
   --fontTwo: 'Source Sans Pro', sans-serif;
   --fontThree: 'Italianno', cursive;
-  --main: #e76d46;
-  --mainFade: #e76e4625;
-  --black: #1e1d1b;
+  --mainMobile: #e76d46;
+  --black: #090909;
+  --red: #e70f00;
+  --tan: #fff4d4;
+  --lightBlue: #daf0fe;
+  --white: #f7f7ff;
 }
