--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,3 +17,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (min-width: 1024px) {
+  .container {
+    background-image: url('./Assets/gt40Desktop.jpg');
+  }
+}
