--- a/src/Styles/Information.module.css
+++ b/src/Styles/Information.module.css
@@ -6,3 +6,15 @@
   align-items: center;
   gap: 1.5rem;
 }
+
+@media only screen and (min-width: 1024px) {
+  .container {
+    min-height: 80px;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .container {
+    min-height: 160px;
+  }
+}
